<resources>
	<string name="app_name">StopTheFakes</string>

	<!--AuthorizationActivity-->
	<string name="authorization_email_hint">E-mail</string>
	<string name="authorization_password_hint">Password</string>
	<string name="button_sign_up">Sign up</string>
	<string name="invalid_email_error">Email is not valid</string>
	<string name="empty_field_error">This field can not be empty</string>
	<string name="error_empty_after_trim_field_error">This field can not contain spaces</string>
	<string name="error_password_matcher">Password is not valid</string>

	<!--ApplicationsListActivity-->
	<string name="newest_items_title">Newest</string>
	<string name="popular_items_title">Popular</string>
	<string name="take_in_work_button">Take the task</string>
	<string name="send_signal_button">Send signal</string>
	<string name="look_button">View</string>
	<string name="fake_string_description">Detect the occurrences of trade in women\'s handbags under "ХХХ" brand name outside the walls of the company stores in London.</string>
	<string name="fake_string_item_header">Radiology X-Ray report has been updated</string>
	<string name="fake_string_item_description">Computer users and programmers have become so accustomed to using Windows, even for the changing capabilities and the appearances of the graphical interface of the versions , therefore it has remained Microsoft\'s product.</string>
	<string name="application_already_in_progress">Application already in progress</string>
	<string name="application_expired">Application expired</string>
	<string name="application_taken">Application taken</string>

	<!--ActivityApplicationDetails-->
	<string name="return_back_title">Back</string>
	<string name="theme_title">Topik:</string>
	<string name="searching_by_subject">The search object:</string>
	<string name="additional_info_title">Additional information:</string>
	<string name="description_title">Description</string>
	<string name="accepted_title">Accepted</string>
	<string name="right_to_use_title">Right to use</string>
	<string name="tips_title">Tips</string>
	<string name="send_signal_by_time">Give a signal at the end of time</string>
	<string name="currency_label">%1$s STF</string>

	<!--OffenderActivity-->
	<string name="info_about_email_title">Если вам известен  E-mail правонарушителя, впишите его</string>
	<string name="info_about_website">Укажите откуда вы взяли E-mail</string>
	<string name="info_about_website_hint">http://…</string>
	<string name="additional_info_offender_title">Укажите адрес, иную дополнительную информацию, которая будет полезна Правообладателю</string>
	<string name="additional_info_hint">No less than 30 signs!</string>

	<!--SignalAcceptedActivity-->
	<string name="thanks">Thank you!</string>
	<string name="your_application_signal">Your signal</string>
	<string name="wait_for_customer">Expect the customer\'s decision</string>

	<!--ChatActivity-->
	<string name="support_title">Support</string>
	<string name="bot_title">Bot</string>
	<string name="fake_string_1">This entry was made hidden from the</string>
	<string name="fake_string_2">This entry was made hidden from the bushes, I guess i know who stole your shoes and this information is unlikely to like you</string>
	<string name="fake_string_3">I guess i know who stole your and this information</string>
	<string name="fake_string_4">Stole your and this information</string>
	<string name="enter_message_text_hint">Enter your message here…</string>

	<!--AllSignalsActivity-->
	<string name="accepted_string">Accepted</string>
	<string name="cancelled_string">Declined</string>
	<string name="on_watching_string">Processed</string>
	<string name="all_string">All</string>
	<string name="time_to_send_title">Accepted automatically in </string>

	<!--FormattedStrings-->
	<string name="format_city_country">%1$s, %2$s</string>
	<string name="accepted_signal">#ID %1$d</string>
	<string name="alert_id">ID %1$d</string>
	<string name="fin_op_title_enroll">Receipt of funds for the Alert ID %1$s following the Request %2$s</string>
	<string name="fin_op_title_withdraw">Funds withdrawal</string>
	<string name="sign_in">Sign In</string>
	<string name="profile_settings">Profile settings</string>
	<string name="personal_infrormation">Personal infrormation</string>
	<string name="status">Status:</string>
	<string name="medium">Medium</string>
	<string name="payment">Payment</string>
	<string name="immediately">Immediately</string>
	<string name="not_more_than_once_every_6_hours">Every 6 hours</string>
	<string name="not_more_than_once_every_12_hours">Every 12 hours</string>
	<string name="not_more_than_once_a_day">Every 24 hours</string>
	<string name="chancel">Cancel</string>
	<string name="save">Save</string>
	<string name="annotation">Annotation</string>
	<string name="name">Name</string>
	<string name="status_and_rating">Status and rating</string>
	<string name="settings">Settings</string>
	<string name="balance">Finances</string>
	<string name="my_signal">My Alerts</string>
	<string name="exit">Exit</string>
	<string name="accepted">Accepted</string>
	<string name="funds_available">Funds Available:</string>
	<string name="total_amount">Total amount</string>
	<string name="declined">Declined</string>
	<string name="expired">Expired</string>

	<!--API-->
	<string name="api_base_url">https://stopthefakes.co/api/</string>
	<string name="api_err_conn_lost">Internet connection lost</string>
	<string name="api_err_incorrect_cred">Incorrect email or password</string>
	<string name="api_err_server_err">Server error</string>
	<string name="api_mess_logout_finished">Logout finished</string>
	<string name="go_to_main_screen_button">Go to main screen button</string>
	<string name="send_signal_navigation_button">Send signal navigation button</string>
	<string name="go_to_menu_page_button">Go to menu page button</string>
	<string name="delete_item_button">Delete item button</string>
	<string name="make_photo_button">Make photo button</string>
	<string name="make_video_button">Make video button</string>
	<string name="file_photo_label">photo %1$d/%2$d</string>
	<string name="main_auth_bg">Main auth bg</string>
	<string name="stopthefakes">StopTheFakes</string>
	<string name="register_success">Register completed. Check email to confirm account</string>
	<string name="messages">Messages</string>
	<string name="enter_your_name">Enter your name</string>
	<string name="enter_your_email">Enter your email</string>
	<string name="enter_text">Enter text</string>
	<string name="_172_points_left_to_level_up">172 points left to level up</string>
	<string name="icon_favorite">icon favorite</string>
	<string name="ico_thumbs_up_hand_symbol">ico thumbs up hand symbol</string>
	<string name="ico_attention">ico attention</string>
	<string name="bonus_coefficient">Bonus coefficient</string>
	<string name="notify_settings">Notify settings</string>
	<string name="instantly">Instantly</string>
	<string name="turn_off_notifications">Turn off notifications</string>
	<string name="change_password">Change password</string>
	<string name="enter_the_current_password">Enter the current password</string>
	<string name="enter_the_new_password">Enter the new password</string>
	<string name="profile_saved">Profile saved</string>
	<string name="provide_your_wallet_number">Provide your wallet number</string>
	<string name="enter_the_amount">Enter the amount</string>
	<string name="withdraw_funds">Withdraw funds</string>
	<string name="withdraw_request_has_been_sent">Withdraw request has been sent</string>
	<string name="support">Support</string>
	<string name="online">Online</string>
	<string name="multimedia_button">Multimedia button</string>
	<string name="message_button">Message button</string>
	<string name="enter_the_offender_s_email_if_you_know_it">Enter the offender\'s email if you know it.</string>
	<string name="where_did_you_find_out_about_the_offender_s_email">Where did you find out about the offender\'s email?</string>
	<string name="add_the_address_and_other_information_relevant_to_the_right_holder">Add the address and other information relevant to the Right holder</string>
	<string name="accepted_image">Accepted image</string>
	<string name="sent">sent!</string>
	<string name="processed">Processed</string>
</resources>