<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/main_background"
	tools:context="user.com.stopthefakes.SettingsActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/default_size"
		android:layout_above="@+id/exit"
		android:layout_alignParentTop="true"
		android:gravity="center_vertical">

		<TextView
			android:id="@+id/settings"
			android:layout_width="match_parent"
			android:layout_height="80dp"
			android:layout_marginTop="@dimen/default_size"
			android:background="@drawable/rounded_white"
			android:drawablePadding="@dimen/default_size"
			android:drawableStart="@drawable/ic_settings_big"
			android:gravity="center_vertical"
			android:paddingStart="@dimen/default_size"
			android:text="@string/settings"
			android:textColor="@color/black"
			android:textSize="16sp"
			android:textStyle="bold"
			tools:ignore="RtlSymmetry" />

		<TextView
			android:id="@+id/balance"
			android:layout_width="match_parent"
			android:layout_height="80dp"
			android:layout_marginTop="@dimen/default_size"
			android:background="@drawable/rounded_white"
			android:drawablePadding="@dimen/default_size"
			android:drawableStart="@drawable/ic_wallet_big"
			android:gravity="center_vertical"
			android:paddingStart="@dimen/default_size"
			android:text="@string/balance"
			android:textColor="@color/black"
			android:textSize="16sp"
			android:textStyle="bold"
			tools:ignore="RtlSymmetry" />

		<TextView
			android:id="@+id/mySignal"
			android:layout_width="match_parent"
			android:layout_height="80dp"
			android:layout_marginTop="@dimen/default_size"
			android:background="@drawable/rounded_white"
			android:drawablePadding="@dimen/default_size"
			android:drawableStart="@drawable/ic_promotion_big"
			android:gravity="center_vertical"
			android:paddingStart="@dimen/default_size"
			android:text="@string/my_signal"
			android:textColor="@color/black"
			android:textSize="16sp"
			android:textStyle="bold"
			tools:ignore="RtlSymmetry" />

		<TextView
			android:id="@+id/messages"
			android:layout_width="match_parent"
			android:layout_height="80dp"
			android:layout_marginTop="@dimen/default_size"
			android:background="@drawable/rounded_white"
			android:drawablePadding="@dimen/default_size"
			android:drawableStart="@drawable/ic_email_big"
			android:gravity="center_vertical"
			android:paddingStart="@dimen/default_size"
			android:text="@string/messages"
			android:textColor="@color/black"
			android:textSize="16sp"
			android:textStyle="bold"
			tools:ignore="RtlSymmetry" />

	</LinearLayout>

	<include
		android:id="@+id/bottomNavigation"
		layout="@layout/bottom_navigation"
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:layout_alignParentBottom="true" />

	<Button
		android:id="@+id/exit"
		style="@style/Button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/bottomNavigation"
		android:layout_marginBottom="16dp"
		android:layout_marginTop="16dp"
		android:background="@drawable/rounded_red"
		android:text="@string/exit"
		android:layout_marginStart="@dimen/default_size"
		android:layout_marginEnd="@dimen/default_size" />

</RelativeLayout>